user info page done

--- a/janken_project/janken_app/templates/janken/index.html
+++ b/janken_project/janken_app/templates/janken/index.html
@@ -3,7 +3,7 @@ As all this information is held as fields within the CustomUser, it suffices to 
 
 {% extends 'janken/base.html' %}
 
-{% block title %}User Info{% endblock %}
+{% block title %}Your Info{% endblock %}
 
 {% block header %}
 <h1 class="header-string">Safehouse</h1>
