--- a/janken_project/janken_app/templates/janken/index.html
+++ b/janken_project/janken_app/templates/janken/index.html
@@ -1,7 +1,4 @@
-<!-- The system will display the "name" and "avatar image" of the logged-in user, as well as "rock-paper-scissors game performance and statistical data." 
-As all this information is held as fields within the CustomUser, it suffices to receive an object of CustomUser and access its fields to display the information. -->
-
-{% extends 'janken/base.html' %}
+{% extends 'base.html' %}
 
 {% block title %}Your Info{% endblock %}
 
@@ -40,3 +37,6 @@ As all this information is held as fields within the CustomUser, it suffices to 
     </table>
 </div>
 {% endblock %}
+
+<!-- The system will display the "name" and "avatar image" of the logged-in user, as well as "rock-paper-scissors game performance and statistical data." 
+As all this information is held as fields within the CustomUser, it suffices to receive an object of CustomUser and access its fields to display the information. -->
