--- a/janken_project/janken_app/templates/janken/janken.html
+++ b/janken_project/janken_app/templates/janken/janken.html
@@ -1,8 +1,4 @@
-<!-- The "janken.html" file serves as a template for displaying a rock-paper-scissors game page. More specifically, 
-it is a template that displays images of the rock-paper-scissors hand signs (rock, paper, scissors) and places a button below each image. 
-This allows users to select their chosen hand in the game of rock-paper-scissors. -->
-
-{% extends 'janken/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 
 {% block title %}Janken{% endblock %}
@@ -30,3 +26,7 @@ This allows users to select their chosen hand in the game of rock-paper-scissors
     </table>
 </form>
 {% endblock %}
+
+<!-- The "janken.html" file serves as a template for displaying a rock-paper-scissors game page. More specifically, 
+it is a template that displays images of the rock-paper-scissors hand signs (rock, paper, scissors) and places a button below each image. 
+This allows users to select their chosen hand in the game of rock-paper-scissors. -->
